# chaotic-inbox

./: .dockerignore  .editorconfig  .env.development  .env.local.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.server  F03_IMPLEMENTATION_PLAN.md  Makefile  README.md  alembic.ini  docker-compose.yml  eslint.config.js  flake.nix  index.html  nginx.conf  package-lock.json  package.json  performance-budget.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.backlog/: config.yml
.backlog/docs/: doc-19 - Design-System.md  (+24 more)
.storybook/: preview.ts
alembic/: env.py
coverage/: index.html
docs/: analyze.md  deployment-checklist.md  deployment.md  git-hooks.md  idea.md  installation.md  localization.md  migrations.md  performance-findings.md  troubleshooting.md
inbox/: __init__.py  config.py  database.py  models.py
plan/: progress-report-phase0.md
plans/: TASK-99-plan.md
specs/: epic 1 - capture.md  epic-1-f01-user-stories.md  epic-1-f02-user-stories.md  epic-1-f03-user-stories.md  epic-1-f04-user-stories.md  epic-1-f05-user-stories.md  epic-1-f06-user-stories.md  epic-1-feature-spec-1.md  epic-2-enrichment-feature-spec-1.md  epic-2-enrichment-user-stories-1.md  heynote - analysis.md
src/: App.css  App.persistence.test.tsx  App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
tests/: conftest.py  test_api_categories.py  test_api_items.py  test_api_search.py  test_api_stats.py  test_api_tags.py  test_cli.py  test_cli_client.py  test_domain.py  test_e2e.py  test_health.py  test_models.py
web/: .prettierignore  index.html  package.json  vite.config.ts
(+378 files in other folders)
