[project]
name = "inbox"
version = "0.1.0"
description = "Chaotic Inbox — Personal knowledge capture (Python backend + React frontend)"
readme = "README.md"
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.24",
    "alembic>=1.15",
    "asyncpg>=0.30",
    "pydantic-settings>=2.8",
    "typer>=0.15",
    "httpx>=0.28",
    "rich>=13.9",
    "python-multipart>=0.0.20",
    "pydantic>=2.10",
    "pgvector>=0.3",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.4",
    "beautifulsoup4>=4.13",
    "lxml>=5.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.1",
    "ruff>=0.11",
    "httpx>=0.28",
    "aiosqlite>=0.21",
]

[project.scripts]
inbox-server = "inbox.server.main:main"
inbox = "inbox.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
